--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 21
@@ -25,4 +26,5 @@ dependencies {
     compile 'com.android.support:support-v4:21.0.3'
     compile 'io.reactivex:rxandroid:1.0.1'
     compile 'io.reactivex:rxjava:1.0.15'
+    compile 'com.google.android.gms:play-services-analytics:8.3.0'
 }
