--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="scvishnu7.blogspot.com.meetsms" >
+    package="scvishnu7.blogspot.com.meetsms">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <application
+        android:name=".MeetMeSMSApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-
+        android:theme="@style/AppTheme">
         <activity
-            android:name="scvishnu7.blogspot.com.meetsms.activities.HomeScreenActivity"
-            android:label="@string/app_name" >
+            android:name=".activities.HomeScreenActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,10 +22,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="scvishnu7.blogspot.com.meetsms.activities.SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:theme="@style/SettingsTheme"
-            android:parentActivityName="scvishnu7.blogspot.com.meetsms.activities.HomeScreenActivity" >
+            android:parentActivityName=".activities.HomeScreenActivity"
+            android:theme="@style/SettingsTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="scvishnu7.blogspot.com.meetsms.activities.HomeScreenActivity" />
