--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="scvishnu7.blogspot.com.meetsms.activities.HomeScreenActivity" />
         </activity>
+        <activity
+            android:name=".activities.HistoryActivity"
+            android:label="@string/title_activity_history"
+            android:parentActivityName=".activities.HomeScreenActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="scvishnu7.blogspot.com.meetsms.activities.HomeScreenActivity" />
+        </activity>
     </application>
 
 </manifest>
